--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,4 @@
-@import 'tailwindcss';
-@plugin '@tailwindcss/forms';
-@plugin '@tailwindcss/typography';
+@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
